--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "homepage": "",
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "jquery": "^2.1.4",
     "jsx-loader": ">=0.10.0",
     "lodash": "^3.10.1",
     "react": ">=0.10.0",
